Clean up after installing ipfs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,9 +111,11 @@ commands:
       - run: |
           curl -O https://dist.ipfs.io/kubo/v0.14.0/kubo_v0.14.0_darwin-amd64.tar.gz
           tar -xvzf kubo_v0.14.0_darwin-amd64.tar.gz
-          cd kubo
+          pushd kubo
           sudo bash install.sh
-          rm -rf kubo
+          popd
+          rm -rf kubo/
+          rm kubo_v0.14.0_darwin-amd64.tar.gz
   git_fetch_all_tags:
     steps:
       - run:
