--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -402,6 +402,11 @@ jobs:
           name: cleanup homebrew
           command: HOMEBREW_NO_AUTO_UPDATE=1 brew uninstall pkg-config goreleaser/tap/goreleaser-pro coreutils jq hwloc
           when: always
+      - run:
+          name: cleanup hwloc
+          command: |
+            cd ~/hwloc && sudo make uninstall
+            cd .. && rm -rf ~/hwloc
 
 
   release:
