Always remove hwloc

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -407,6 +407,7 @@ jobs:
           command: |
             cd ~/hwloc && sudo make uninstall
             cd .. && rm -rf ~/hwloc
+          when: always
 
 
   release:
