--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -75,9 +75,9 @@ commands:
             - run:
                 name: Install hwloc
                 command: |
-                  mkdir ~/hwloc
-                  curl --location https://download.open-mpi.org/release/hwloc/v2.4/hwloc-2.4.1.tar.gz --output ~/hwloc/hwloc-2.4.1.tar.gz
-                  cd ~/hwloc
+                  mkdir /tmp/hwloc
+                  curl --location https://download.open-mpi.org/release/hwloc/v2.4/hwloc-2.4.1.tar.gz --output /tmp/hwloc/hwloc-2.4.1.tar.gz
+                  cd /tmp/hwloc
                   tar -xvzpf hwloc-2.4.1.tar.gz
                   cd hwloc-2.4.1
                   ./configure && make && sudo make install
@@ -405,8 +405,9 @@ jobs:
       - run:
           name: cleanup hwloc
           command: |
-            cd ~/hwloc/hwloc-2.4.1 && sudo make uninstall
-            cd && rm -rf ~/hwloc
+            cd /tmp/hwloc/hwloc-2.4.1
+            make clean && sudo make uninstall
+            cd && sudo rm -rf /tmp/hwloc
           when: always
 
 
