Install ipfs with apk on alpin release container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -397,7 +397,8 @@ jobs:
         type: boolean
     steps:
       - checkout
-      - install_ipfs
+      - run: |
+          apk update && apk add kubo
       - attach_workspace:
           at: /tmp/workspace
       - when:
