Clean up release flow post testing

--- a/.circleci/template.yml
+++ b/.circleci/template.yml
@@ -830,7 +830,6 @@ workflows:
           filters:
             branches:
               only:
-                - goreleaser-prebuilt-m1
                 - /^release\/v\d+\.\d+\.\d+(-rc\d+)?$/
             tags:
               only:
@@ -840,7 +839,6 @@ workflows:
           filters:
             branches:
               only:
-                - goreleaser-prebuilt-m1
                 - /^release\/v\d+\.\d+\.\d+(-rc\d+)?$/
             tags:
               only:
@@ -850,12 +848,24 @@ workflows:
           filters:
             branches:
               only:
-                - goreleaser-prebuilt-m1
                 - /^release\/v\d+\.\d+\.\d+(-rc\d+)?$/
             tags:
               only:
                 - /^v\d+\.\d+\.\d+(-rc\d+)?$/
       - release:
+          name: "Release (dry-run)"
+          requires:
+            - "Build ( darwin / amd64 )"
+            - "Build ( linux / amd64 )"
+            - "Build ( darwin / arm64 )"
+          filters:
+            branches:
+              ignore:
+                - /.*/
+            tags:
+              only:
+                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
+      - release-dry-run:
           name: "Release (dry-run)"
           dry-run: true
           requires:
@@ -865,11 +875,7 @@ workflows:
           filters:
             branches:
               only:
-                - goreleaser-prebuilt-m1
                 - /^release\/v\d+\.\d+\.\d+(-rc\d+)?$/
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
       - build-appimage:
           name: "Build AppImage"
           filters:
