Try the boolean as a string instead

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -81,7 +81,7 @@ brews:
     homepage: "https://filecoin.io"
     description: "A homebrew cask for installing filecoin-project/lotus on MacOS"
     license: MIT
-    skip_upload: {{not .IsPrerelease}}
+    skip_upload: "{{not .IsPrerelease}}"
     dependencies:
       - name: hwloc
 
